--- a/ai-video-system/backend/package.json
+++ b/ai-video-system/backend/package.json
@@ -43,7 +43,9 @@
     "axios": "^1.6.2",
     "openai": "^4.20.1",
     "@google-cloud/storage": "^7.7.0",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
