Add asset management services and update backend configuration

--- a/ai-video-system/backend/.env.example
+++ b/ai-video-system/backend/.env.example
@@ -33,6 +33,12 @@ AWS_ACCESS_KEY_ID=your-aws-access-key
 AWS_SECRET_ACCESS_KEY=your-aws-secret-key
 AWS_REGION=us-east-1
 AWS_S3_BUCKET=your-s3-bucket-name
+AWS_S3_VIDEOS_BUCKET=your-s3-videos-bucket-name
+AWS_S3_IMAGES_BUCKET=your-s3-images-bucket-name
+AWS_S3_AUDIO_BUCKET=your-s3-audio-bucket-name
+AWS_S3_DOCUMENTS_BUCKET=your-s3-documents-bucket-name
+AWS_S3_THUMBNAILS_BUCKET=your-s3-thumbnails-bucket-name
+AWS_S3_TEMP_BUCKET=your-s3-temp-bucket-name
 
 # AI Service Configuration
 OPENAI_API_KEY=sk-your-openai-api-key
