--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,21 @@
     {
       "src": "index.html",
       "use": "@vercel/static"
+    },
+    {
+      "src": "ai-video-system/frontend/package.json",
+      "use": "@vercel/next"
     }
   ],
   "routes": [
+    {
+      "src": "/app/(.*)",
+      "dest": "/ai-video-system/frontend/$1"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "/ai-video-system/backend/src/index.js"
+    },
     {
       "src": "/(.*)",
       "dest": "/index.html"
