--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,10 @@
     },
     {
       "src": "ai-video-system/frontend/package.json",
-      "use": "@vercel/next"
+      "use": "@vercel/next",
+      "config": {
+        "installCommand": "npm install --legacy-peer-deps"
+      }
     }
   ],
   "routes": [
