--- a/ai-video-system/frontend/package.json
+++ b/ai-video-system/frontend/package.json
@@ -14,70 +14,73 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "14.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.3.2",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.3.2",
+    "@react-three/drei": "^9.88.17",
+    "@react-three/fiber": "^8.15.12",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.4.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20.9.2",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
-    "tailwindcss": "^3.3.6",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
-    "framer-motion": "^10.16.16",
-    "react-hook-form": "^7.48.2",
-    "@hookform/resolvers": "^3.3.2",
-    "zod": "^3.22.4",
     "axios": "^1.6.2",
-    "socket.io-client": "^4.7.4",
-    "zustand": "^4.4.7",
-    "react-query": "^3.39.3",
-    "react-hot-toast": "^2.4.1",
-    "react-dropzone": "^14.2.3",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-player": "^2.13.0",
-    "fabric": "^5.3.0",
-    "three": "^0.159.0",
-    "@react-three/fiber": "^8.15.12",
-    "@react-three/drei": "^9.88.17",
-    "recharts": "^2.8.0",
-    "date-fns": "^2.30.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "fabric": "^5.3.0",
+    "framer-motion": "^10.16.16",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.294.0",
+    "next": "14.0.3",
+    "nprogress": "^0.2.0",
+    "postcss": "^8.4.32",
+    "prismjs": "^1.29.0",
+    "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-confetti": "^6.1.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-markdown": "^9.0.1",
+    "react-player": "^2.13.0",
+    "react-query": "^3.39.3",
     "react-spring": "^9.7.3",
+    "react-syntax-highlighter": "^15.5.0",
     "react-use-gesture": "^9.1.3",
     "react-virtualized": "^9.22.5",
     "react-window": "^1.8.8",
-    "react-infinite-scroll-component": "^6.1.0",
-    "react-markdown": "^9.0.1",
+    "recharts": "^2.8.0",
     "remark-gfm": "^4.0.0",
-    "prismjs": "^1.29.0",
-    "react-syntax-highlighter": "^15.5.0",
-    "nprogress": "^0.2.0",
-    "js-cookie": "^3.0.5",
-    "@stripe/stripe-js": "^2.4.0",
-    "@stripe/react-stripe-js": "^2.4.0"
+    "socket.io-client": "^4.7.4",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss": "^3.3.6",
+    "three": "^0.159.0",
+    "typescript": "^5.3.2",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "eslint": "^8.55.0",
-    "eslint-config-next": "14.0.3",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/fabric": "^5.3.6",
-    "@types/three": "^0.159.0",
+    "@types/js-cookie": "^3.0.6",
+    "@types/nprogress": "^0.2.3",
     "@types/react-beautiful-dnd": "^13.1.7",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@types/react-virtualized": "^9.21.29",
     "@types/react-window": "^1.8.8",
-    "@types/nprogress": "^0.2.3",
-    "@types/js-cookie": "^3.0.6",
-    "@types/react-syntax-highlighter": "^15.5.11",
+    "@types/three": "^0.159.0",
+    "eslint": "^8.55.0",
+    "eslint-config-next": "14.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/user-event": "^14.5.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "engines": {
